[package]
name = "pwgn"
version = "0.1.0"
edition = "2021"
description = "Command line password generation"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tacentio/pwgn"
repository = "https://github.com/tacentio/pwgn"

[dependencies]
password-gen = "2.1.0"
clap = { version = "3.1.18", features = ["derive"] }
